resources/examples/testing/00-assert12_2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: cnpg-system
spec:
  template:
    spec:
      imagePullSecrets:
      - name: canonical-registry-credentials
