resources/examples/testing/rem_01-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp
  labels:
    name: myapp
spec:
  volumes:
  - name: vol
    secret:
      secretName: mysecrets
  containers:
  - name: myapp
    volumeMounts:
    - mountPath: /vars
      name: vol
    image: eu.foo.io/nginx:secure-tag@sha256:0000000000000000000000000000000000000000000000000000000000000000
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
      requests:
        cpu: 100m
        memory: 512Mi
    ports:
    - containerPort: 80
    securityContext:
      capabilities:
        drop:
        - ALL
      runAsNonRoot: true
      readOnlyRootFilesystem: true
      runAsGroup: 10001
      runAsUser: 10001
    imagePullPolicy: Always
  securityContext:
    supplementalGroups:
    - 100
    fsGroup: 2000
    runAsUser: 1000
    runAsGroup: 3000
