resources/examples/testing/rem_high_cpu_pod_1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: frontend-stable-cka05-arch
spec:
  nodeName: cluster5-controlplane
  containers:
  - name: fe-cka05-arch
    image: eu.foo.io/stress:secure-tag@sha256:0000000000000000000000000000000000000000000000000000000000000000
    resources:
      limits:
        cpu: "0.395"
        memory: 512Mi
      requests:
        cpu: "0.35"
        memory: 512Mi
    args:
    - -cpus
    - "1"
    securityContext:
      capabilities:
        drop:
        - ALL
      runAsNonRoot: true
      readOnlyRootFilesystem: true
      runAsGroup: 10001
      runAsUser: 10001
    imagePullPolicy: Always
  securityContext:
    supplementalGroups:
    - 100
    fsGroup: 2000
    runAsUser: 1000
    runAsGroup: 3000
  nodeSelectorAdditional: autogenerated-string
