resources/examples/testing/rem_high_memory_pod_1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: backend-cka06-arch
  namespace: secure-namespace
spec:
  nodeName: cluster1-node02
  containers:
  - name: memory-demo-ctr
    image: eu.foo.io/stress:secure-tag@sha256:0000000000000000000000000000000000000000000000000000000000000000
    resources:
      requests:
        memory: "1G"
        cpu: 100m
      limits:
        memory: "1.2G"
        cpu: 100m
    command: ["stress"]
    args: ["--vm", "1", "--vm-bytes", "1G", "--vm-hang", "1"]
    securityContext:
      capabilities:
        drop:
        - ALL
      runAsNonRoot: true
      readOnlyRootFilesystem: true
      runAsGroup: 10001
      runAsUser: 10001
    imagePullPolicy: Always
  securityContext:
    supplementalGroups:
    - 100
    fsGroup: 2000
    runAsUser: 1000
    runAsGroup: 3000
  nodeSelectorAdditional: autogenerated-string
