resources/examples/testing/vllm_dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vllm
  labels:
    app: gpu-test1-vllm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vllm
  template:
    metadata:
      labels:
        app: vllm
    spec:
      containers:
      - name: vllm-container
        image: quay.io/chenw615/vllm_dra:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: cache-volume
          mountPath: /root/.cache/huggingface
        resources:
          limits:
            nvidia.com/mig-3g.20gb: 1
      volumes:
      - name: cache-volume
        persistentVolumeClaim:
          claimName: huggingface-cache-pvc
