resources/examples/testing/watcher.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: watcher
  namespace: default
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: watcher
      app.kubernetes.io/instance: watcher
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: watcher
        app.kubernetes.io/instance: watcher
    spec:
      restartPolicy: Always
      serviceAccountName: watcher
      containers:
        - name: watcher
          image: davideberdin/watcher:latest
          imagePullPolicy: Always
          resources:
            limits:
              cpu: "1"
              memory: 1Gi
            requests: {}
          volumeMounts:
            - name: configuration
              mountPath: /opt/watcher/config.toml
              subPath: config.toml
      volumes:
        - name: configuration
          configMap:
            name: watcher-config
