resources/examples/testing/0-mongo-secret-sts_2.yaml
apiVersion: v1
kind: Service
metadata:
  name: eticket-mongodb
spec:
  clusterIP: None
  selector:
    app: mongo
  ports:
  - protocol: TCP
    port: 27017
    targetPort: 27017
