resources/examples/testing/01-deployment-original_1.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: '2020-01-28T12:40:28Z'
  labels:
    app: hello-world-rest-api
  name: hello-world-rest-api
  namespace: default
  resourceVersion: '1250'
  selfLink: /api/v1/namespaces/default/services/hello-world-rest-api
  uid: 5d6a09ca-41cb-11ea-8e69-42010a80009c
spec:
  clusterIP: 10.0.8.24
  externalTrafficPolicy: Cluster
  ports:
  - nodePort: 32208
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: hello-world-rest-api
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
    - ip: 35.193.152.162
