resources/examples/testing/hostName.yaml
apiVersion: v1
kind: Service
metadata:
  name: hostname
  labels:
    app: hostname
spec:
  ports:
  - port: 8080
    name: http
  clusterIP: None
  selector:
    app: hostname
