resources/examples/testing/virtualservice_destinationhosts.yaml
apiVersion: v1
kind: Service
metadata:
  name: reviews
  namespace: default
spec:
  ports:
  - port: 42
    name: tcp-test
    protocol: TCP
