resources/examples/testing/virtualservice_destinationhosts_1.yaml
apiVersion: v1
kind: Service
metadata:
  name: reviews-2port
  namespace: default
spec:
  ports:
  - port: 80
    name: http-test
    protocol: HTTP
  - port: 443
    name: https-test
    protocol: HTTPS
