resources/examples/testing/virtualservice_route_rule_no_effects_ingress_4.yaml
apiVersion: v1
kind: Service
metadata:
  name: ratings
  namespace: default
spec:
  ports:
  - port: 80
    name: http-ratings
    protocol: HTTP
